--- a/_data/preload.yml
+++ b/_data/preload.yml
@@ -1,4 +1,14 @@
 images:
+- added: '2024-04-30 06:28:35.359557'
+  iiif: true
+  thumbnail: https://dam.museabrugge.be/iiif/2/public%2F417.tif/full/full/0/default.jpg
+  title:
+  - en:
+    - Death of the Virgin
+    nl:
+    - Dood van Maria
+  url: https://dam.museabrugge.be/iiif/3/417/manifest.json
+  user: Pascal Ennaert
 - added: '2024-04-24 09:45:22.046845'
   iiif: true
   thumbnail: https://iiif.kmska.be/c/iiif/2/public@27084.tif/full/120,/0/default.jpg
